adding email sending and changing filters